2.2.5/_sources/gallery/images_contours_and_fields/contourf_hatching.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_images_contours_and_fields_contourf_hatching.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_images_contours_and_fields_contourf_hatching.py:


=================
Contourf Hatching
=================

Demo filled contour plots with hatched patterns.


.. code-block:: default

    import matplotlib.pyplot as plt
    import numpy as np

    # invent some numbers, turning the x and y arrays into simple
    # 2d arrays, which make combining them together easier.
    x = np.linspace(-3, 5, 150).reshape(1, -1)
    y = np.linspace(-3, 5, 120).reshape(-1, 1)
    z = np.cos(x) + np.sin(y)

    # we no longer need x and y to be 2 dimensional, so flatten them.
    x, y = x.flatten(), y.flatten()








Plot 1: the simplest hatched plot with a colorbar


.. code-block:: default


    fig1, ax1 = plt.subplots()
    cs = ax1.contourf(x, y, z, hatches=['-', '/', '\\', '//'],
                      cmap='gray', extend='both', alpha=0.5)
    fig1.colorbar(cs)




.. image:: /gallery/images_contours_and_fields/images/sphx_glr_contourf_hatching_001.png
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <matplotlib.colorbar.ColorbarPatch object at 0x7fd73c1adca0>



Plot 2: a plot of hatches without color with a legend


.. code-block:: default


    fig2, ax2 = plt.subplots()
    n_levels = 6
    ax2.contour(x, y, z, n_levels, colors='black', linestyles='-')
    cs = ax2.contourf(x, y, z, n_levels, colors='none',
                      hatches=['.', '/', '\\', None, '\\\\', '*'],
                      extend='lower')

    # create a legend for the contour set
    artists, labels = cs.legend_elements()
    ax2.legend(artists, labels, handleheight=2)
    plt.show()




.. image:: /gallery/images_contours_and_fields/images/sphx_glr_contourf_hatching_002.png
    :class: sphx-glr-single-img





------------

References
""""""""""

The use of the following functions, methods and classes is shown
in this example:


.. code-block:: default


    import matplotlib
    matplotlib.axes.Axes.contour
    matplotlib.pyplot.contour
    matplotlib.axes.Axes.contourf
    matplotlib.pyplot.contourf
    matplotlib.figure.Figure.colorbar
    matplotlib.pyplot.colorbar
    matplotlib.axes.Axes.legend
    matplotlib.pyplot.legend
    matplotlib.contour.ContourSet
    matplotlib.contour.ContourSet.legend_elements




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <function ContourSet.legend_elements at 0x7fd7579d0b80>




.. _sphx_glr_download_gallery_images_contours_and_fields_contourf_hatching.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: contourf_hatching.py <contourf_hatching.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: contourf_hatching.ipynb <contourf_hatching.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
